Converts project to use jQuery

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="colors" class="colors"></div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="colors.js"></script>
   <script src="script.js"></script>
 </body>
